# torchmil

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  notes.md  objects.inv  pyproject.toml  setup.py  todo.md
.github/: build_docs.yml
.github/ISSUE_TEMPLATE/: BUG_TEMPLATE.md  config.yml
.github/workflows/: build_docs.yml  check_deploy_docs.sh  publish.yml  run_tests.yml
_overrides/partials/: source.html
_static/: custom_css.css
api/: index.html
api/data/: index.html
api/datasets/: index.html
api/models/: index.html
api/nn/: index.html
api/utils/: index.html
api/visualize/: index.html
docs/: index.html  index.md  requirements.txt
docs/_overrides/: main.html
docs/api/: index.md
docs/models/: ABMIL.md
examples/: ctscan_classification.ipynb  data.ipynb  data_representation.ipynb  datasets.ipynb  gnn_integration.ipynb  index.html  index.md  training_first_model.ipynb  training_first_rsna.ipynb  training_your_first_mil_model.ipynb  wsi_classification.ipynb
examples/benchmark/: Trainer.py  arguments.py  evaluate.py  pruebas.ipynb  run_experiment.py  train_test.py
examples/data_representation/: index.html
examples/pruebas/: pruebas.ipynb  (+3 more)
experiments/: Trainer.py  annealing_scheduler.py  arguments.py  dataset_loader.py  evaluate.py  evaluate_runs.py  log_dirichlet_energy.py  model_builder.py  predict.py  run_experiment.py  train_test.py
getting_started/: index.html
mkdocs_tutorial/: mkdocs.yml
search/: search_index.json
tests/: requirements.txt  test_Camelyon16.py  test_ToyMIL.py  test_WSIDataset.py  test_abmil.py  test_clam.py  test_collate.py  test_prob_smooth_abmil.py  test_sm_abmil.py
torchmil/: pruebas.ipynb  utils.py
upload_datasets/: upload_camelyon.sh  upload_panda.sh  upload_rsna.sh
(+330 files in other folders)
