[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmil"
version = "0.0.1"
authors = [
    { name="Francisco Miguel Castro-Macías", email="francastro8b@gmail.com" },
]
description = "Deep Multiple Instance Learning library for Pytorch"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords=[
    "deep-learning",
    "pytorch",
    "multiple-instance-learning",
    "multi-instance-learning",
    "mil",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch",
    "tensordict",
    "torchmetrics",
    "einops",
    "scipy",
    "tqdm",
    "numpy",
]


[project.optional-dependencies]
docs = [
    "hippogriffe==0.2.0",
    "mkdocs==1.6.1",
    "mkdocs-include-exclude-files==0.1.0",
    "mkdocs-ipynb==0.1.0",
    "mkdocs-material==9.6.7",
    "mkdocstrings[python]==0.28.3",
    "pymdown-extensions==10.14.3",
]

[project.urls]
homepage = "https://franblueee.github.io/torchmil/"
documentation = "https://franblueee.github.io/torchmil/api/"
repository = "https://github.com/Franblueee/torchmil"
issues = "https://github.com/Franblueee/torchmil/issues"

[tool.flake8]
max-line-length = 100
exclude = [".ipynb", "build", ".pytest_cache", "upload_datasets"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
